<resources>
    <string name="app_name">AndroidTvSample</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Movies</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movies">Movies</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="series">Series</string>
    <string name="tv">Tv</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="playlists">Playlists</string>
    <string name="change_playlist_name">Name</string>
    <string name="playlist_settings">Manage Playlist</string>
    <string name="playlist_epg_settings">Epg Settings</string>
    <string name="playlist_enabled">Playlist Enabled</string>
    <string name="playlist_disabled">Playlist Disabled</string>
    <string name="add_playlist">    Add Playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="manage_groups">Manage Categories</string>
    <string name="manage_epg">Manage EPG</string>
    <string name="layout_options">Layout</string>
    <string name="epg_options">EPG</string>
    <string name="provider_type">Choose the type of provider!</string>
    <string name="token_ok">Playlist valid! Load data from server..</string>
    <string name="plex_account_ok">Plex Sign In OK! Get servers..</string>
    <string name="tv_ok">TV categories loaded:</string>
    <string name="channels_loading">Loading tv categories &amp; channels..</string>
    <string name="channels_ok">Channels loaded:</string>
    <string name="xxx_channels_ok">xxx-channels loaded:</string>
    <string name="epg_loading">Loading EPG from server..</string>
    <string name="epg_ok">EPG loaded:</string>
    <string name="movies_ok">All movie categories loaded:</string>
    <string name="movies_loading">Loading movie categories..</string>
    <string name="series_ok">All series categories loaded:</string>
    <string name="series_loading">Loading series categories..</string>
    <string name="playlist_added">Playlist successfully added!</string>
    <string name="manage_playlist">Hide/show categories</string>

    <!-- Error messages -->
    <string name="save">Save</string>
    <string name="more">more..</string>
    <string name="less">less..</string>
    <string name="next">next:</string>
    <string name="no_information">No Information</string>
    <string name="no_description">No description available</string>
    <string name="no_epg_available">No EPG Data available</string>
    <string name="token_error">Can\'t connect to server!</string>
    <string name="tv_error">Can\'t load tv categories from server!</string>
    <string name="channels_error">Can\'t load tv channels from server!</string>
    <string name="epg_error">Can\'t load EPG from server!</string>
    <string name="epg_empty">No EPG data found!</string>
    <string name="show_full_epg">Show Full Epg</string>
    <string name="movies_error">Can\'t load movie categories from server!</string>
    <string name="series_error">Can\'t load series categories from server!</string>
    <string name="playlist_error">No data received, Playlist deleted! Playlist NOT added!</string>
    <string name="match_channels_epg"><![CDATA[Match Channels & Epg]]></string>
    <string name="epg_priority">Set Epg priority</string>
    <string name="epg_sources">EPG Sources</string>
    <string name="add_epg_source">Add EPG-source</string>
    <string name="epg_source_name">Epg-source name</string>
    <string name="recommended">(recommended)</string>
    <string name="info_epg_priority">Click on epg-source to change it\'s position.\nThe order of the sources is used when assigning epg to channels</string>
    <string name="channel_options">Channel options</string>
    <string name="hide_channel">Hide channel</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="edit_channel_name">Edit channel name</string>
    <string name="assign_epg">Assign EPG</string>
    <string name="open_channel_editor">Open channel editor</string>
    <string name="epg_time_offset">EPG time-offset</string>
    <string name="configure_days">Set previous days &amp; max days</string>
    <string name="time_offset">Time Offset</string>
    <string name="edit_source_name">Edit source-name</string>
    <string name="delete_epg_source">Delete EPG-source</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_all">Select All</string>
    <string name="channel_editor">Channel Editor</string>
    <string name="channel_logos">Channel Logos</string>
    <string name="prefere_epg_logos">Prefere EPG Logos</string>
    <string name="prefere_playlist_logos">Prefere Playlist Logos</string>
    <string name="select_epg_source">Select EPG Source</string>
    <string name="search_for_matching_channel">Search for matching Channel..</string>
    <string name="no_active_accounts">NO ACTIVE ACCOUNTS!</string>
    <string name="replay_show">Replay show!</string>
    <string name="set_reminder">Set reminder</string>
    <string name="general">General</string>
    <string name="customize_tv_category_names">Modify tv-category names</string>
    <string name="customize_vod_category_names">Modify vod-category names</string>
    <string name="vod_player_settings">VOD Player Settings</string>
    <string name="tv_player_settings">TV Player Settings</string>
    <string name="customize_movie_series_names">Modify movie/series names</string>
    <string name="tmdb_settings">TMDb Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="update_epg_source">Update EPG-Source</string>
    <string name="manage_categories">Manage categories</string>
    <string name="movie_categories">Movie Categories</string>
    <string name="actor_s">Actor(s):</string>
    <string name="director_s">Director(s):</string>
    <string name="more_info">More Info</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>
    <string name="mark_watched">Mark as seen</string>
    <string name="mark_not_watched">Mark as unseen</string>
    <string name="current_channel_name">Current Channel Name:</string>
    <string name="original_channel_name">Original Channel Name:</string>
    <string name="reset_to_original_channel_name">Reset to original channel name</string>
    <string name="update_playlist">Update Playlist</string>
    <string name="tv_enabled">Tv Enabled</string>
    <string name="vod_enabled">Vod Enabled</string>
    <string name="last_updated">Last updated:</string>
    <string name="save_changes">Save changes</string>
    <string name="set_auto_update">Set Auto-Update Time</string>
    <string name="update_on_app_start">Update On App Start</string>
    <string name="channel_sorting">Channel Sorting</string>
    <string name="sort_alphabetically">Sort alphabetically (A-Z)</string>
    <string name="sort_manually">Sort manually</string>
    <string name="sort_by_playlist">Sort by Playlist</string>
    <string name="show_all_epg_sources">Show all epg-sources</string>
    <string name="epg_source">Epg-Source:</string>
    <string name="days_to_save_epg_data">Days to save Epg data</string>
    <string name="modify_epg_source_name">Modify Epg-Source Name</string>
    <string name="current_epg_source_name">Current Epg-Source Name:</string>
    <string name="rearrange_channels">Rearrange Channels</string>
    <string name="up_down_move_channel">Up/Down: Move Channel</string>
    <string name="category_options">Category Options</string>
    <string name="remove_category">Remove category</string>
    <string name="edit_category_name">Edit category name</string>
    <string name="rearrange_categories">Rearrange categories</string>
    <string name="original_category_name">Original Category Name:</string>
    <string name="reset_to_original_category_name">Reset to original category name</string>
    <string name="enter_channel_name">Enter Channel Name</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="current_category_name">Current Category Name</string>
    <string name="set_category_name">Set category name:</string>
    <string name="add_channels">Add channels</string>
    <string name="enable_category_for_all_playlists">Enable category for all playlists</string>
    <string name="my_categories">My Categories</string>
    <string name="modify_channel_names">Modify channel names</string>
    <string name="series_categories">Series Categories</string>
    <string name="sort_by_date_added">Sort by date added</string>
    <string name="sort_by_alphabet">Sort by alphabet</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="search_for_movie">Search for movie...</string>
    <string name="no_matching_movies_found">No matching movies found!</string>
    <string name="search_for">Search for...</string>
    <string name="no_data_found">No data found!</string>
    <string name="plex">Plex</string>
    <string name="reset_movie_watchtime">Remove / Reset Movie</string>
    <string name="set_movie_as_completely_watched">Set movie as completely watched!</string>
    <string name="tv_categories_editor">Tv Categories Editor</string>
</resources>