<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="@drawable/background_border_settings_left"
    android:background="?attr/backgroundDarkDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_groups"
            android:textSize="16sp"
            android:textColor="?attr/textMainColor"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="?attr/backgroundDarkDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/btn_manage_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:background="@drawable/selector_item_background_dark"
            android:focusable="true"
            android:gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btn_manage_movies"
            android:nextFocusUp="@id/btn_manage_tv"
            android:nextFocusLeft="@id/btn_manage_tv"
            android:nextFocusRight="@id/btn_manage_tv"
            android:text="@string/tv"
            android:textColor="@drawable/focused_selected_mainmenu" />

        <TextView
            android:id="@+id/btn_manage_movies"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:background="@drawable/selector_item_background_dark"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btn_manage_series"
            android:nextFocusUp="@id/btn_manage_tv"
            android:nextFocusLeft="@id/btn_manage_movies"
            android:nextFocusRight="@id/btn_manage_movies"
            android:gravity="center_vertical"
            android:text="@string/movies"
            android:textColor="@drawable/focused_selected_mainmenu" />


        <TextView
            android:id="@+id/btn_manage_series"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:background="@drawable/selector_item_background_dark"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btn_manage_series"
            android:nextFocusUp="@id/btn_manage_movies"
            android:nextFocusLeft="@id/btn_manage_series"
            android:nextFocusRight="@id/btn_manage_series"
            android:text="@string/series"
            android:textColor="@drawable/focused_selected_mainmenu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>