<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="@drawable/background_border_settings_right"
    android:background="?attr/backgroundDarkDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_channelNameOptions"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="?attr/backgroundDarkDark"
        android:textColor="?attr/textColorLight"
        android:text="Edit Channel Name"/>

    <TextView
        android:id="@+id/tv_initialName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_channel_name"
        android:textColor="?attr/textMainColor"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@id/tv_channelNameOptions"/>

    <TextView
        android:id="@+id/tv_original_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColorLight"
        android:layout_marginTop="4dp"
        android:textColorHint="?attr/textColorDarkGrey"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:ignore="TextFields"
        android:textSize="13sp"
        android:backgroundTint="@color/light_blue"
        android:layout_below="@id/tv_initialName"/>

    <TextView
        android:id="@+id/tv_currentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_channel_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@id/tv_original_name"/>


    <EditText
        android:id="@+id/et_editedChannelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColorLight"
        android:textColorHint="?attr/textColorDarkGrey"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:nextFocusDown="@id/btn_resetChannelName"
        android:nextFocusUp="@id/et_editedChannelName"
        android:nextFocusLeft="@id/et_editedChannelName"
        android:nextFocusRight="@id/et_editedChannelName"
        android:hint="Enter Channel Name"
        tools:ignore="TextFields"
        android:textSize="13sp"
        android:backgroundTint="@color/light_blue"
        android:layout_below="@id/tv_currentName"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <TextView
        android:id="@+id/btn_resetChannelName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reset_to_original_channel_name"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@drawable/focused_selected_textview"
        android:background="@drawable/settings_item_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:nextFocusLeft="@id/btn_resetChannelName"
        android:nextFocusRight="@id/btn_resetChannelName"
        android:nextFocusUp="@id/et_editedChannelName"
        android:nextFocusDown="@id/btn_resetChannelName"
        android:layout_below="@id/et_editedChannelName"/>

</RelativeLayout>
